# UGE-L2-PERF-C-TP3-EXAMPLE

./: CMakeLists.txt  main.c
inc/: Graphics.h  Time.h
src/: Graphics.c  Time.c
